[gd_scene load_steps=5 format=3 uid="uid://pebkxsyy23yb"]

[ext_resource type="Script" path="res://scenes/ui/farm/hover_selector.gd" id="1_gh0og"]
[ext_resource type="Texture2D" uid="uid://csycvt6wfet4r" path="res://art/tileset/JunePlaceholderGround.png" id="1_gv21m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fpsfa"]
atlas = ExtResource("1_gv21m")
region = Rect2(0, 32, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3la8w"]
size = Vector2(32, 32)

[node name="HoverSelector" type="Area2D"]
collision_layer = 0
collision_mask = 256
script = ExtResource("1_gh0og")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 32.0
offset_bottom = 32.0
texture = SubResource("AtlasTexture_fpsfa")
expand_mode = 1
stretch_mode = 5

[node name="OverlapDetector" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_3la8w")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
